--- a/app/index.html
+++ b/app/index.html
@@ -302,11 +302,30 @@
       </div>
     </div>
 
-<p>
-    Binance demande une quantité min et une décimal max sur les échanges :<br>
-    https://www.binance.com/fr/trade-rule<br>
-    Dans la liste, à côté de la paire, est indiqué la décimal max.<br>
-</p>
+
+    <div class="row">
+      
+      <div class="col-sm">
+
+        <p>
+            Binance demande une quantité min et une décimal max sur les échanges :<br>
+            https://www.binance.com/fr/trade-rule<br>
+            Dans la liste, à côté de la paire, est indiqué la décimal max.<br>
+        </p>
+
+    </div>
+
+    <div class="col-sm">
+
+        <p>
+        Pour la quantité à indiquer, c'est la quantité du base asset :<br>
+        Par exemple sur la paire BTC/USDT, la quantité à indiquer c'est la quantité de BTC que vous voulez echanger (vendre/acheter) !<br>
+        Pour la vente ça ne pose pas de problème particulier à l'usage, mais pour l'achat c'est plus embettant, dev en cours pour mettre le nombre d'usdt à depenser.
+        </p>
+
+    </div>
+
+  </div>
 
 
   </body>
