--- a/app/index.html
+++ b/app/index.html
@@ -309,7 +309,7 @@
 
         <p>
             Binance demande une quantité min et une décimal max sur les échanges :<br>
-            https://www.binance.com/fr/trade-rule<br>
+            <a href="https://www.binance.com/fr/trade-rule" target="_blank">https://www.binance.com/fr/trade-rule</a><br>
             Dans la liste, à côté de la paire, est indiqué la décimal max.<br>
         </p>
 
