--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -66,7 +66,7 @@
     <p>Exactement la même chose mais dans l'autre sens.</p>
     <br>
     <h3>Bonus</h3> 
-    <p>C'est des market orders, pas de risque de vendre ou acheter à un prix délirant.<br>Si vous voulez gérer un liste de plusieurs smart buy/sell, ouvrez plusieurs onglets.</p>
+    <p>Quand le smart sell/buy s'acheve, c'est un market order qui est executé : pas de risque de vendre ou acheter à un prix délirant.<br>Si vous voulez gérer un liste de plusieurs smart buy/sell, ouvrez plusieurs onglets.</p>
 
   </main>
 
