--- a/app/index.html
+++ b/app/index.html
@@ -310,7 +310,7 @@
         <p>
             Binance demande une quantité min et une décimal max sur les échanges :<br>
             <a href="https://www.binance.com/fr/trade-rule" target="_blank">https://www.binance.com/fr/trade-rule</a><br>
-            Dans la liste, à côté de la paire, est indiqué la décimal max.<br>
+            Dans la liste déroulante, à côté de la paire, est indiqué la décimal max.<br>
         </p>
 
     </div>
