--- a/app/index.html
+++ b/app/index.html
@@ -320,7 +320,7 @@
         <p>
         Pour la quantité à indiquer, c'est la quantité du base asset :<br>
         Par exemple sur la paire BTC/USDT, la quantité à indiquer c'est la quantité de BTC que vous voulez echanger (vendre/acheter) !<br>
-        Pour la vente ça ne pose pas de problème particulier à l'usage, mais pour l'achat c'est moins pratique, dev en cours pour mettre le nombre d'usdt à depenser.
+        Pour la vente ça ne pose pas de problème particulier à l'usage, mais pour l'achat c'est moins pratique.
         </p>
 
     </div>
