--- a/cheatcode/index.html
+++ b/cheatcode/index.html
@@ -33,8 +33,8 @@
       <script type="text/javascript">
       new TradingView.widget(
       {
-        "width": 1274,
-    "height": 644,
+        "width": 856,
+    "height": 646,
       "symbol": "BINANCE:BTCUSDT",
       "interval": "1",
       "timezone": "Etc/UTC",
@@ -53,6 +53,37 @@
       </script>
     </div>
     <!-- TradingView Widget END -->
+  </td>
+
+  <td>
+
+    <table>
+      <tr>
+        <td>
+          <iframe src="https://coin360.com/" frameborder="0" width="844" height="398"></iframe>
+        </td>
+      </tr>
+      <tr>
+        <td>
+        <table>
+         
+        <td>
+          <img  width="256" height="231" src="https://alternative.me/crypto/fear-and-greed-index.png" alt="Latest Crypto Fear & Greed Index" />
+        </td>   
+
+        <td>
+          <iframe src="https://risitrade.surge.sh/" frameborder="0" width="582" height="231"></iframe>
+        </td>
+
+        </table>
+        </td>
+
+      </tr>
+
+
+
+    </table>
+
   </td>
 
 
@@ -76,8 +107,8 @@
     <script type="text/javascript">
     new TradingView.widget(
     {
-      "width": 1274,
-    "height": 644,
+      "width": 848,
+    "height": 646,
     "symbol": "BINANCE:BTCUSDT",
     "interval": "5",
     "timezone": "Etc/UTC",
@@ -106,8 +137,8 @@
     <script type="text/javascript">
     new TradingView.widget(
     {
-      "width": 1274,
-    "height": 644,
+      "width": 856,
+    "height": 646,
     "symbol": "BINANCE:BTCUSDT",
     "interval": "15",
     "timezone": "Etc/UTC",
@@ -121,6 +152,36 @@
     "allow_symbol_change": true,
     "save_image": false,
     "container_id": "tradingview_b1bb0"
+  }
+    );
+    </script>
+  </div>
+  <!-- TradingView Widget END -->
+</td>
+
+<td>
+  <!-- TradingView Widget BEGIN -->
+  <div class="tradingview-widget-container"> 
+    <div id="tradingview_b6bb0"></div>
+    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+    <script type="text/javascript">
+    new TradingView.widget(
+    {
+      "width": 848,
+    "height": 646,
+    "symbol": "BINANCE:BTCUSDT",
+    "interval": "60",
+    "timezone": "Etc/UTC",
+    "theme": "dark",
+    "style": "1",
+    "locale": "fr",
+    "toolbar_bg": "#f1f3f6",
+    "enable_publishing": false,
+    "withdateranges": true,
+    "hide_side_toolbar": false,
+    "allow_symbol_change": true,
+    "save_image": false,
+    "container_id": "tradingview_b6bb0"
   }
     );
     </script>
