--- a/cheatcode/index.html
+++ b/cheatcode/index.html
@@ -35,7 +35,7 @@
       {
         "width": 856,
     "height": 646,
-      "symbol": "BINANCE:BTCUSDT",
+      "symbol": "BINANCE:BTCUSDTPERP",
       "interval": "1",
       "timezone": "Etc/UTC",
       "theme": "dark",
@@ -109,7 +109,7 @@
     {
       "width": 848,
     "height": 646,
-    "symbol": "BINANCE:BTCUSDT",
+    "symbol": "BINANCE:BTCUSDTPERP",
     "interval": "5",
     "timezone": "Etc/UTC",
     "theme": "dark",
@@ -139,7 +139,7 @@
     {
       "width": 856,
     "height": 646,
-    "symbol": "BINANCE:BTCUSDT",
+    "symbol": "BINANCE:BTCUSDTPERP",
     "interval": "15",
     "timezone": "Etc/UTC",
     "theme": "dark",
@@ -169,7 +169,7 @@
     {
       "width": 848,
     "height": 646,
-    "symbol": "BINANCE:BTCUSDT",
+    "symbol": "BINANCE:BTCUSDTPERP",
     "interval": "60",
     "timezone": "Etc/UTC",
     "theme": "dark",
