--- a/cheatcode/index.html
+++ b/cheatcode/index.html
@@ -52,7 +52,7 @@
       );
       </script>
     </div>
-    <!-- TradingView Widget END -->
+    <!-- TradingView Widget END  -->
   </td>
 
   <td>
@@ -95,10 +95,19 @@
 
 
   
-  <table>
+  <table style="margin-top:-8px;">
 
 
   <td>
+
+    <table>
+
+      <td style="width:220px;">
+        <a class="twitter-timeline" data-width="220" data-height="646" data-theme="dark" href="https://twitter.com/whale_alert?ref_src=twsrc%5Etfw">Tweets by whale_alert</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+      </td>
+
+      <td>
 
   <!-- TradingView Widget BEGIN -->
   <div class="tradingview-widget-container"> 
@@ -107,10 +116,10 @@
     <script type="text/javascript">
     new TradingView.widget(
     {
-      "width": 848,
+      "width": 628,
     "height": 646,
     "symbol": "BINANCE:BTCUSDTPERP",
-    "interval": "5",
+    "interval": "D",
     "timezone": "Etc/UTC",
     "theme": "dark",
     "style": "1",
@@ -127,6 +136,14 @@
     </script>
   </div>
   <!-- TradingView Widget END -->
+
+      </td>
+
+    </table>
+
+
+
+
 </td>
 
 <td>
