--- a/cheatcode/index.html
+++ b/cheatcode/index.html
@@ -20,8 +20,14 @@
 
 
     <table>
+
       <td>
-    <div id="seconds_chart"></div>
+        <iframe style="position:absolute;top:-0px;left:-139px;" width="400" height="646" frameborder="0" src="https://frame.cryptowat.ch/fr-fr/charts/BINANCE:BTC-USDT-FUTURE-PERPETUAL"></iframe>
+      </td>
+
+
+      <td>
+    <div style="margin-left:228px" id="seconds_chart"></div>
       </td>
 
     <td>
@@ -60,7 +66,7 @@
     <table>
       <tr>
         <td>
-          <iframe src="https://coin360.com/" frameborder="0" width="844" height="398"></iframe>
+          <iframe name="iframe1" id="iframe1" src="https://coin360.com/" frameborder="0" width="844" height="398"></iframe>
         </td>
       </tr>
       <tr>
